Add icons to profile-site

--- a/Components/header/header.css
+++ b/Components/header/header.css
@@ -13,7 +13,7 @@
   position: absolute;
   top: 22.7vw;
   left: 30vw;
-  margin: 0 0 20vw 0;
+
   min-width: 40vw;
   min-height: 40vw;
 
@@ -25,4 +25,14 @@
   border-radius: 50%;
 
   z-index: 10;
+}
+
+.header__icon-box {
+  display: flex;
+  flex-direction: column;
+  gap: 5.3vw;
+
+  position: absolute;
+  top: 16vw;
+  right: 6.4vw;
 }
