--- a/Components/Main/base.css
+++ b/Components/Main/base.css
@@ -13,6 +13,8 @@ html {
   --color: #ecebed;
   --color-pink: #f62ebe;
   --color-secondary-lightgrey: #727477;
+  --color-secondary-darkgrey: #323436;
+  --color-primary-socialblue: #2e8af6;
   --color-gradient: #f62e8e, #ac1af0;
   --color-gradient1: #f62e8e;
   --color-gradient2: #ac1af0;
