Add content to summary

--- a/Components/Main/base.css
+++ b/Components/Main/base.css
@@ -11,7 +11,7 @@ html {
 :root {
   --background-color: #181a1c;
   --color: #ecebed;
-  --color-pink: #f62ebe;
+  --color-pink: #f62e8e;
   --color-secondary-lightgrey: #727477;
   --color-secondary-darkgrey: #323436;
   --color-primary-socialblue: #2e8af6;
