--- a/Components/Main/icons.css
+++ b/Components/Main/icons.css
@@ -31,7 +31,7 @@
 }
 
 .icon {
-  filter: brightness(7);
+  _filter: brightness(7);
 
   min-width: 1.5rem;
   min-height: 1.2rem;
@@ -44,6 +44,6 @@
   min-height: 1.5rem;
 }
 
-.icon__like--blue {
-  color: blue;
+.icon--blue {
+  color: var(--color-primary-socialblue);
 }
