--- a/Components/Main/base.css
+++ b/Components/Main/base.css
@@ -24,6 +24,6 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  background-color: blue;
+  background-color: var(--background-color);
   color: var(--color);
 }
