--- a/Components/Main/icons.css
+++ b/Components/Main/icons.css
@@ -3,10 +3,11 @@
   justify-content: center;
   align-items: center;
 
+  padding: 0.6rem;
   position: relative;
 
-  min-width: 3.2rem;
-  min-height: 3.2rem;
+  width: 3.2rem;
+  height: 3.2rem;
   border-radius: 50%;
   border: 1px solid var(--color-secondary-lightgrey);
 
