--- a/Components/Main/text.css
+++ b/Components/Main/text.css
@@ -1,5 +1,5 @@
 .text {
-  font-family: "Poppins", sans-serif;
+  font-family: arial, "Poppins", sans-serif;
   font-size: 1.3rem;
 
   line-height: 2rem;
