--- a/Components/Main/icons.css
+++ b/Components/Main/icons.css
@@ -32,17 +32,12 @@
 }
 
 .icon {
-  _filter: brightness(7);
+  filter: brightness(7);
 
   min-width: 1.5rem;
   min-height: 1.2rem;
 
   border-radius: 50%;
-}
-
-.icon--high {
-  min-width: 1.2rem;
-  min-height: 1.5rem;
 }
 
 .icon--blue {
