Add Post to Home

--- a/styles.css
+++ b/styles.css
@@ -7,3 +7,4 @@
 @import "./Components/Main/navbar.css";
 @import "./Components/Main/searchbar.css";
 @import "./Components/Main/text.css";
+@import "./Components/post/post.css";
